# ImageEditorGL

./: README.md  settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  (+15 more)
gleditorlib/: build.gradle
gleditorlib/src/main/cpp/: CMakeLists.txt  app.cpp  app.h  clip.cpp  clip.h  common.h  editor_lib.cpp  gl.h  image.cpp  image.h  mosaic.cpp  mosaic.h  origin_image.cpp  origin_image.h  paint.cpp  paint.h  shader.cpp  shader.h
gleditorlib/src/main/cpp/glm/: CMakeLists.txt
gleditorlib/src/main/cpp/glm/detail/: type_quat.hpp
gleditorlib/src/main/cpp/glm/ext/: matrix_clip_space.hpp  matrix_relational.inl  quaternion_common.hpp  quaternion_exponential.hpp  quaternion_geometric.hpp  scalar_relational.inl  scalar_ulp.hpp  scalar_ulp.inl  vector_common.hpp  vector_int1_sized.hpp  vector_int2_sized.hpp  vector_int3_sized.hpp  vector_int4_sized.hpp  vector_uint1_sized.hpp  vector_uint2_sized.hpp  vector_uint3_sized.hpp  vector_uint4_sized.hpp  vector_ulp.hpp
gleditorlib/src/main/cpp/glm/gtc/: quaternion.hpp  type_aligned.hpp  type_precision.hpp  type_ptr.hpp
gleditorlib/src/main/cpp/glm/gtx/: gradient_paint.hpp  hash.hpp  intersect.hpp  io.hpp  io.inl  matrix_query.hpp  norm.hpp  normalize_dot.hpp  perpendicular.hpp  quaternion.hpp  rotate_vector.hpp  spline.hpp  string_cast.hpp  texture.hpp  transform2.hpp  type_trait.hpp  vector_angle.hpp
gleditorlib/src/main/cpp/util/: log.h  math.hpp  shader.cpp  shader.h
gleditorlib/src/main/cpp/widget/: clip.cpp  clip.h  image.cpp  image.h  mosaic.cpp  mosaic.h  origin_image.cpp  origin_image.h  paint.cpp  paint.h
(+49 files in other folders)
